# transducer-agent

./: .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  deny.toml
.github/workflows/: ci.yml  release.yml  security.yml
config/: settings.json
homebrew/: README.md  transducer.rb
src/: artifacts.rs  main.rs  spiffe_auth.rs
tests/: e2e_test.rs  mock_orchestrator.rs  permission_lattice_test.rs  sandbox_enforcement_test.rs  security_prompt_injection_test.rs  security_sandbox_escape_test.rs  spiffe_negative_paths_test.rs
tests/fixtures/: test-policy.json
